recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:2: error: identifier expected but 'var' found.
def spiral(var pas,var angle,var length,var increment)    {
           ^Spiral:25: error: ':' expected but '}' found.
}
^