recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(var pas,var angle,var length,var increment)    {	
		
	marche = pas+5
	
	avance(marche)
	gauche(angle)
	var length = length+increment
	
	if (length == 75){
	 	return
	 }
	 else{
	 	spiral(marche, 90, length, 1)
	 }
}
